--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,165 @@
 /* You can add global styles to this file, and also import other style files */
+
+/* Importing Bootstrap SCSS file. */
+@import "bootstrap/scss/bootstrap";
+:root {
+  --body-background: #171717;
+}
+// body styling
+body {
+  background-color: var(--body-background) !important;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  #topProp,
+  #bottomProp {
+    position: absolute;
+    height: 100vh;
+    width: 30vw;
+    top: 0;
+    z-index: -40;
+  }
+  #topProp {
+    -webkit-animation: pulse 10s infinite, bounce 3s infinite;
+    -moz-animation: pulse 10s infinite, bounce 3s infinite;
+    -o-animation: pulse 10s infinite, bounce 3s infinite;
+    animation: pulse 10s infinite, bounce 3s infinite;
+    left: 0;
+    &::after,
+    &::before {
+      content: "";
+      height: 200px;
+      width: 200px;
+      border-radius: 100%;
+      position: absolute;
+      filter: blur(110px);
+    }
+    &::after {
+      background-image: linear-gradient(
+        -225deg,
+        #3498db 0,
+        #9b59b6 29%,
+        #e74c3c 67%,
+        #f1c40f 100%
+      );
+      background-size: 500% 500%;
+      animation: bg 1s ease-in-out infinite;
+      width: 100%;
+      bottom: 10%;
+      left: 40%;
+    }
+    &::before {
+      background-image: linear-gradient(
+        -225deg,
+        #3498db 0,
+        #9b59b6 29%,
+        #e74c3c 67%,
+        #f1c40f 100%
+      );
+      background-size: 500% 500%;
+      animation: bg 2s ease-in-out infinite;
+      width: 100%;
+      bottom: 40%;
+      left: 10%;
+    }
+  }
+  #bottomProp {
+    -webkit-animation: pulse 10s infinite, bounce 3s infinite;
+    -moz-animation: pulse 10s infinite, bounce 3s infinite;
+    -o-animation: pulse 10s infinite, bounce 3s infinite;
+    animation: pulse 10s infinite, bounce 3s infinite;
+    right: 0;
+    &::after,
+    &::before {
+      content: "";
+      height: 200px;
+      width: 200px;
+      border-radius: 100%;
+      position: absolute;
+      filter: blur(110px);
+    }
+    &::after {
+      background-image: linear-gradient(
+        -225deg,
+        #3498db 0,
+        #9b59b6 29%,
+        #e74c3c 67%,
+        #f1c40f 100%
+      );
+      background-size: 500% 500%;
+      animation: bg 3s ease-in-out infinite;
+      width: 100%;
+      top: 10%;
+      right: 10%;
+    }
+    &::before {
+      background-image: linear-gradient(
+        -225deg,
+        #3498db 0,
+        #9b59b6 29%,
+        #e74c3c 67%,
+        #f1c40f 100%
+      );
+      background-size: 500% 500%;
+      animation: bg 4s ease-in-out infinite;
+      width: 100%;
+      top: 40%;
+      right: 30%;
+    }
+  }
+}
+// constant
+.white {
+  color: white;
+}
+.black {
+  color: black;
+}
+.whiteBg {
+  background-color: white;
+}
+.blackBg {
+  background-color: black;
+}
+// key frames
+@keyframes pulse {
+  from {
+    transform: scale(1);
+    opacity: 1;
+  }
+  50% {
+    transform: scale(0.75);
+    opacity: 0.25;
+  }
+  to {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+@keyframes bounce {
+  0% {
+    top: 200px;
+    animation-timing-function: ease-in-out;
+  }
+  25% {
+    top: 50px;
+    animation-timing-function: ease-in-out;
+  }
+  50% {
+    top: 100px;
+    animation-timing-function: ease-in-out;
+  }
+  75% {
+    top: 75px;
+    animation-timing-function: ease-in-out;
+  }
+  100% {
+    top: 200px;
+  }
+}
+@keyframes bg {
+  50% {
+    background-position: 100% 100%;
+  }
+}
