--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,17 +7,37 @@
 }
 // body styling
 body {
-  background-color: var(--body-background) !important;
+  // background-color: var(--body-background) !important;
+  position: relative;
   width: 100vw;
   height: 100vh;
   overflow: hidden;
+  &::after,
+  &::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #171717;
+    z-index: -1;
+  }
+  &::after{
+    opacity: 0.9;
+  }
+  &::before{
+    // background: url('./assets/Loginwallpaper.jpg');
+    // opacity: 0.6;
+  }
   #topProp,
   #bottomProp {
     position: absolute;
     height: 100vh;
     width: 30vw;
     top: 0;
-    z-index: -40;
+    z-index: 0;
   }
   #topProp {
     -webkit-animation: pulse 10s infinite, bounce 3s infinite;
@@ -120,6 +140,12 @@ body {
 }
 .blackBg {
   background-color: black;
+}
+.capitalize{
+  text-transform: capitalize;
+}
+.height70vh{
+  height: 70vh;
 }
 // key frames
 @keyframes pulse {
