--- a/src/app/dashboard/overview/overview.component.html
+++ b/src/app/dashboard/overview/overview.component.html
@@ -1,5 +1,8 @@
-<div class="container mt-5">
+<div class="container mt-3">
     <div class="row">
+        <div class="col-sm-12">
+            <app-greet></app-greet>
+        </div>
         <div class="col-sm-3">
             <app-flip-card avatar="../../../assets/studentIcon.png" alt="student icon" heading="Total Students" text="1198"></app-flip-card>
         </div>
