--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,6 +1,5 @@
 <div class="row">
-    <div class="col-sm-3"></div>
-    <div class="col-sm-9">
-        <app-text tag="h6" text="Copyright © 2023. All rights reserved. Powered by Negex." class="white text-center"></app-text>
+    <div class="col-sm-12">
+        <app-text tag="p" text="Copyright © 2023. All rights reserved. Powered by Negex." class="white text-center"></app-text>
     </div>
 </div>
