--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,15 +1,13 @@
-<div class="container p-3">
-    <div class="row">
-        <div class="col-sm-12">
-            <app-header [style.height]="headerHeight + 'px'"></app-header>
-        </div>
-        <div class="col-sm-3">
+<div class="p-3">
+    <div class="row justify-content-between">
+        <div [ngClass]="sidebarExpanded ? 'col-sm-2' : 'col-sm-1'" >
             <app-sidebar [isExpanded]="sidebarExpanded" (toggleSidebar)="sidebarExpanded = !sidebarExpanded"></app-sidebar>
         </div>
-        <div class="col-sm-9 height70vh" [style.height]="bodyHeight + 'px'">
-            <router-outlet></router-outlet>
-        </div>
-        <div class="col-sm-12">
+        <div [ngClass]="sidebarExpanded ? 'col-sm-10' : 'col-sm-11'" >
+            <app-header [style.height]="headerHeight + 'px'"></app-header>
+            <div [style.height]="bodyHeight + 'px'">
+                <router-outlet></router-outlet>
+            </div>
             <app-footer [style.height]="footerHeight + 'px'"></app-footer>
         </div>
     </div>
