--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -1,1 +1,29 @@
-<p>sidebar works!</p>
+<div class="sidebar" [ngClass]="{ 'expanded': isExpanded }">
+  <div class="header">
+    <app-image-wrapper *ngIf="isExpanded" image="../../../assets/logo.webp" alt="Logo" [width]="100" [height]="50"
+      [objectFit]="'contain'"></app-image-wrapper>
+    <app-image-wrapper *ngIf="!isExpanded" image="../../../assets/miniLogo.webp" alt="Logo" [width]="100" [height]="50"
+      [objectFit]="'contain'"></app-image-wrapper>
+    <div class="toggle" (click)="handleSidebarToggle()">
+      <span class="chevron"></span>
+    </div>
+  </div>
+  <div class="content d-flex justify-content-center flex-column p-3">
+    <a [routerLink]="'over-view'" class="no-textDecoration">
+      <app-text tag="p" text="Over View" class="white mb-0 p-1 text-center"></app-text>
+    </a>
+    <div ngbDropdown class="d-flex justify-content-center">
+      <a href="javascript:void(0)" class="white no-border no-textDecoration" id="dropdownBasic1" ngbDropdownToggle>
+        Students
+      </a>
+      <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
+        <a [routerLink]="'students'" class="no-textDecoration">
+          <app-text tag="p" text="Students" class="white mb-0 pt-3 pb-3"></app-text>
+        </a>
+        <a [routerLink]="'students'" class="no-textDecoration">
+          <app-text tag="p" text="Add Student" class="white mb-0 pt-3 pb-3"></app-text>
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
