--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -8,22 +8,24 @@
       <span class="chevron"></span>
     </div>
   </div>
-  <div class="content d-flex justify-content-center flex-column p-3">
-    <a [routerLink]="'over-view'" class="no-textDecoration">
-      <app-text tag="p" text="Over View" class="white mb-0 p-1 text-center"></app-text>
-    </a>
-    <div ngbDropdown class="d-flex justify-content-center">
-      <a href="javascript:void(0)" class="white no-border no-textDecoration" id="dropdownBasic1" ngbDropdownToggle>
-        Students
+  <div class="content d-flex justify-content-center flex-column p-3" *ngFor="let item of sidebar">
+    <ng-container *ngIf="!item.children">
+      <a [routerLink]="item.route" class="no-textDecoration">
+        <app-text tag="p" [text]="item.name" class="white mb-0 p-1 text-center"></app-text>
       </a>
-      <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
-        <a [routerLink]="'students'" class="no-textDecoration">
-          <app-text tag="p" text="Students" class="white mb-0 pt-3 pb-3"></app-text>
+    </ng-container>
+    <ng-container *ngIf="item.children">
+      <div ngbDropdown class="d-flex justify-content-center">
+        <a href="javascript:void(0)" class="white no-border no-textDecoration" id="{{item.name}}" ngbDropdownToggle>
+          {{item.name}}
         </a>
-        <a [routerLink]="'students'" class="no-textDecoration">
-          <app-text tag="p" text="Add Student" class="white mb-0 pt-3 pb-3"></app-text>
-        </a>
+        <div ngbDropdownMenu>
+          <a [routerLink]="child.route" *ngFor="let child of item.children" class="no-textDecoration">
+            <app-text tag="p" [text]="child.name" class="white mb-0 pt-3 pb-3"></app-text>
+          </a>
+        </div>
       </div>
-    </div>
+    </ng-container>
   </div>
+  
 </div>
