--- a/src/app/layout/sidebar/sidebar.component.scss
+++ b/src/app/layout/sidebar/sidebar.component.scss
@@ -62,14 +62,33 @@
     }
   }
 }
-.content{
-  .dropdown-menu.show {
-    display: block;
-    text-align: left;
-    color: white;
-    background: transparent;
-    border: 0;
+.dropdown-menu {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  z-index: 1000;
+  float: left;
+  min-width: 10rem;
+  padding: 0.5rem 0;
+  margin: 0.125rem 0 0;
+  font-size: 1rem;
+  color: #212529;
+  text-align: left;
+  list-style: none;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid rgba(0, 0, 0, 0.15);
+  border-radius: 0.25rem;
 }
+
+.content{
+//   .dropdown-menu.show {
+//     display: block;
+//     text-align: left;
+//     color: white;
+//     background: transparent;
+//     border: 0;
+// }
 a{
   &:hover{
     color: white;
