--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -11,18 +11,18 @@
   <div class="content d-flex justify-content-center flex-column" *ngFor="let item of sidebar">
     <ng-container *ngIf="!item.children">
       <a [routerLink]="item.route" class="no-textDecoration d-flex align-items-center justify-content-center p-3">
-        <!-- <i class="fa {{item.icon}}"></i> -->
         <app-text tag="p" [text]="item.name" class="white mb-0 p-1 text-center"></app-text>
       </a>
     </ng-container>
     <ng-container *ngIf="item.children">
       <div ngbDropdown class="p-3 text-center">
-        <a href="javascript:void(0)" class="white no-border no-textDecoration mb-0" id="{{item.name}}" ngbDropdownToggle>
+        <a href="javascript:void(0)" class="white no-border no-textDecoration mb-0" id="{{item.name}}"
+          ngbDropdownToggle>
           {{item.name}}
         </a>
         <div ngbDropdownMenu>
-          <a [routerLink]="child.route" *ngFor="let child of item.children" class="no-textDecoration d-flex align-items-center">
-            <!-- <i class="fa {{child.icon}}"></i> -->
+          <a [routerLink]="child.route" *ngFor="let child of item.children"
+            class="no-textDecoration d-flex align-items-center">
             <app-text tag="p" [text]="child.name" class="black mb-0 p-1 text-center"></app-text>
           </a>
         </div>
