working on students course work done

--- a/src/app/dashboard/overview/overview.component.html
+++ b/src/app/dashboard/overview/overview.component.html
@@ -10,7 +10,7 @@
             <app-flip-card avatar="../../../assets/teacherIcon.png" alt="teacher icon" heading="Total Teachers" text="400"></app-flip-card>
         </div>
         <div class="col-sm-3">
-            <app-flip-card avatar="../../../assets/coursesIcon.png" alt="courses icon" heading="Total Courses" text="100"></app-flip-card>
+            <app-flip-card avatar="../../../assets/coursesIcon.png" alt="courses icon" heading="Total Courses" [text]="coursesLength"></app-flip-card>
         </div>
     </div>
 </div>
