--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,5 +1,6 @@
-<div class="row align-items-center">
+<div class="row align-items-center mb-3">
     <div class="col-sm-12">
-        <app-text tag="h2" [text]="routeName" class="mb-0 text-center white capitalize"></app-text>
+        <h2 class="mb-0 text-center white capitalize">{{routeName}}</h2>
+        <!-- <app-text tag="h2" [text]="routeName" class="mb-0 text-center white capitalize"></app-text> -->
     </div>
 </div>
