--- a/src/app/shared/flip-card/flip-card.component.html
+++ b/src/app/shared/flip-card/flip-card.component.html
@@ -6,7 +6,7 @@
       </div>
       <div class="flip-card-back">
         <app-text tag="h1" [text]="heading" class="mb-0 text-center white capitalize"></app-text>
-        <app-text tag="p" [text]="text" class="mb-0 text-center white capitalize"></app-text>
+        <p class="mb-0 text-center white capitalize">{{text}}</p>
       </div>
     </div>
   </div>
