--- a/src/app/dashboard/students/addstudent/addstudent.component.html
+++ b/src/app/dashboard/students/addstudent/addstudent.component.html
@@ -1,1 +1,10 @@
-<p>addstudent works!</p>
+<div class="container ps-5 pe-5 h100vh d-flex justify-content-center align-items-center w-100">
+    <div class="row w-100">
+        <div class="col-sm-12">
+          <app-form [fields]="['Name', 'Address', 'Age', 'Number']" [fieldTypes]="['text', 'text', 'number', 'number']" [error]="true"></app-form>
+        </div>
+        <div class="col-sm-12 mt-3 mb-3 d-flex justify-content-center align-items-center">
+          <app-button text="Add" [onClick]="addStudent.bind(this)"></app-button>
+        </div>
+      </div>
+</div>
