--- a/src/app/dashboard/students/students.component.html
+++ b/src/app/dashboard/students/students.component.html
@@ -1,1 +1,29 @@
-<p>students works!</p>
+<div class="container ps-5 pe-5 pt-5 pb-5 text-center">
+    <div class="row">
+        <div class="col-sm-12 d-flex justify-content-end w-100">
+            <app-button text="Add Student" [onClick]="route.bind(this)"></app-button>
+        </div>
+        <div class="col-sm-12">
+            <table class="table table-responsive table-dark white hover">
+                <thead>
+                  <tr>
+                    <th>ID</th>
+                    <th>Name</th>
+                    <th>Address</th>
+                    <th>Age</th>
+                    <th>Number</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr *ngFor="let row of data">
+                    <td>{{ row.id }}</td>
+                    <td>{{ row.name }}</td>
+                    <td>{{ row.address }}</td>
+                    <td>{{ row.age }}</td>
+                    <td>{{ row.number }}</td>
+                  </tr>
+                </tbody>
+              </table>
+        </div>
+    </div>
+</div>
