--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -9,12 +9,12 @@
     </div>
   </div>
   <div class="content d-flex justify-content-center flex-column" *ngFor="let item of sidebar">
-    <ng-container *ngIf="!item.children">
-      <a [routerLink]="item.route" class="no-textDecoration d-flex align-items-center justify-content-center p-3">
+    <ng-container>
+      <a [routerLink]="item.route" (click)="header(item.name)" class="no-textDecoration d-flex align-items-center justify-content-center p-3">
         <app-text tag="p" [text]="item.name" class="white mb-0 p-1 text-center"></app-text>
       </a>
     </ng-container>
-    <ng-container *ngIf="item.children">
+    <!-- <ng-container *ngIf="item.children">
       <div ngbDropdown class="p-3 text-center">
         <a href="javascript:void(0)" class="white no-border no-textDecoration mb-0" id="{{item.name}}"
           ngbDropdownToggle>
@@ -27,6 +27,6 @@
           </a>
         </div>
       </div>
-    </ng-container>
+    </ng-container> -->
   </div>
 </div>
