--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,6 +16,7 @@ body {
   width: 100vw;
   height: 100vh;
   overflow: hidden;
+  z-index: 0;
   &::after,
   &::before{
     content: "";
@@ -41,7 +42,7 @@ body {
     height: 100vh;
     width: 30vw;
     top: 0;
-    z-index: 0;
+    z-index: -1;
     will-change: border-radius, transform, opacity;
   }
   #topProp {
@@ -140,8 +141,9 @@ body {
   }
 }
 // constant
-.white {
-  color: white;
+.white,
+.dataTables_wrapper div{
+  color: white !important;
 }
 .black {
   color: black;
@@ -164,6 +166,9 @@ body {
 }
 .no-textDecoration{
   text-decoration: none;
+}
+.h100vh{
+  height: 100vh;
 }
 // .slider-thumb::before {
 // 	position: absolute;
