--- a/src/app/dashboard/overview/overview.component.html
+++ b/src/app/dashboard/overview/overview.component.html
@@ -4,10 +4,10 @@
             <app-greet></app-greet>
         </div>
         <div class="col-sm-3">
-            <app-flip-card avatar="../../../assets/studentIcon.png" alt="student icon" heading="Total Students" text="1198"></app-flip-card>
+            <app-flip-card avatar="../../../assets/studentIcon.png" alt="student icon" heading="Total Students" [text]="studentsLength"></app-flip-card>
         </div>
         <div class="col-sm-3">
-            <app-flip-card avatar="../../../assets/teacherIcon.png" alt="teacher icon" heading="Total Teachers" text="400"></app-flip-card>
+            <app-flip-card avatar="../../../assets/teacherIcon.png" alt="teacher icon" heading="Total Teachers" [text]="teachersLength"></app-flip-card>
         </div>
         <div class="col-sm-3">
             <app-flip-card avatar="../../../assets/coursesIcon.png" alt="courses icon" heading="Total Courses" [text]="coursesLength"></app-flip-card>
