--- a/src/app/shared/button/button.component.scss
+++ b/src/app/shared/button/button.component.scss
@@ -42,7 +42,7 @@
   text-decoration: none;
   text-transform: uppercase;
   overflow: hidden;
-  margin: 25px;
+  margin-bottom: 10px;
   font-family: "Roboto", sans-serif;
   filter: hue-rotate(0deg);
   transition: all 0.1s linear;
