--- a/src/app/shared/loader/loader.component.html
+++ b/src/app/shared/loader/loader.component.html
@@ -1,5 +1,5 @@
 <!-- Loader starts-->
-<div class="loader-wrapper"[class.loderhide]="!show">
+<div class="loader-wrapper">
     <img src="assets/loader.gif" alt="">
    </div>
    <!-- Loader ends-->
