routing completed with role guard and courses selection completed of students and teachers now working on attendance and fess and marks

--- a/src/app/dashboard/change-password/change-password.component.html
+++ b/src/app/dashboard/change-password/change-password.component.html
@@ -4,7 +4,7 @@
         <app-form [fields]="['Old Password', 'New Password']" [fieldTypes]="['password', 'password']" [error]="true"></app-form>
       </div>
       <div class="col-sm-12 mt-3 mb-3 d-flex justify-content-center align-items-center">
-        <app-button text="Change" [onClick]="login.bind(this)"></app-button>
+        <app-button text="Change" [onClick]="changePassword.bind(this)"></app-button>
       </div>
     </div>
   </div>
